backend updates, new model for printing

--- a/nextintranet_backend/nextintranet_warehouse/templates/warehouse/stock/item_detail.html
+++ b/nextintranet_backend/nextintranet_warehouse/templates/warehouse/stock/item_detail.html
@@ -46,7 +46,7 @@
   </div>
 
   <!-- Button to open the modal -->
-  <button @click="open = true; loadForm('/edit)" class="mt-4 bg-blue-500 text-white px-4 py-2 rounded">
+  <button @click="open = true; loadForm('/edit')" class="mt-4 bg-blue-500 text-white px-4 py-2 rounded">
     Open Form
   </button>
 </div>
