--- a/nextintranet_backend/nextintranet_backend/templates/base_layout.html
+++ b/nextintranet_backend/nextintranet_backend/templates/base_layout.html
@@ -3,18 +3,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="manifest" href="{% static 'manifest.json' %}">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Moje PWA Aplikace">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextIntranet</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <script src="/static/htmx.min.js"></script>
  
       <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/css/select2.min.css" rel="stylesheet">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/js/select2.min.js"></script>
+
+      <script>
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker.register("{% static 'service-worker.js' %}")
+            .then(reg => console.log("Service Worker registered!", reg))
+            .catch(err => console.log("Service Worker failed", err));
+        }
+      </script>
     <style>
             /* Flexibilní layout */
             .flex {
@@ -116,7 +129,8 @@
               </button>
               </div>
               <div>
-                In app: {{ in_app }}
+                In app: {{ in_app }} <br>
+                In PWA: {{ in_pwa }} 
               </div>
           </nav>
         </aside>
