--- a/nextintranet_backend/nextintranet_warehouse/templates/warehouse/stock/detail/warehouse_stock.html
+++ b/nextintranet_backend/nextintranet_warehouse/templates/warehouse/stock/detail/warehouse_stock.html
@@ -77,7 +77,7 @@
               <span class="material-icons mr-1">build</span>
               Operation
             </a>
-            <button class="flex items-center text-gray-500 hover:text-gray-700 text-sm" id="print-button" onclick="window.electronAPI.printLabel('store/print/packet/', '{{bag.id}}')">
+            <button class="flex items-center text-gray-500 hover:text-gray-700 text-sm" id="print-button" onclick="printLabel('store/print/packet/', '{{bag.id}}')">
               <span class="material-icons mr-1">print</span>
               Print
             </button>
@@ -118,7 +118,15 @@
     </div>
   </div>
 
+
+  <script src="qrc:/qtwebchannel/qwebchannel.js"></script>
   <script>
+
+    
+    var nia;
+    new QWebChannel(qt.webChannelTransport, function (channel) {
+        nia = channel.objects.nia;
+    });
 
     function copyToClipboard(text) {
       console.log('copying', text);
@@ -128,6 +136,12 @@
       el.select();
       document.execCommand('copy');
       document.body.removeChild(el);
+    }
+
+
+    function printLabel(url, id) {
+      console.log('printing', url, id);
+      nia.print_local(url, id);      
     }
 
   </script>
