--- a/nextintranet_frontend/src/app/layout/layout.component.html
+++ b/nextintranet_frontend/src/app/layout/layout.component.html
@@ -20,37 +20,18 @@
   <div class="layout-content">
     <!-- Desktop Sidebar -->
     <div class="layout-sidebar" [ngClass]="{'hidden': !isSidebarVisible, 'collapsed': isSidebarCollapsed}" *ngIf="!isMobile">
+
       <div class="sidebar-header">
         <button pButton icon="pi pi-angle-left" *ngIf="!isSidebarCollapsed" (click)="toggleSidebarCollapse()"
           class="p-button-text p-button-rounded collapse-btn"></button>
         <button pButton icon="pi pi-angle-right" *ngIf="isSidebarCollapsed" (click)="toggleSidebarCollapse()"
           class="p-button-text p-button-rounded collapse-btn"></button>
       </div>
-      <div class="sidebar-menu">
-        <ul>
-          <li *ngFor="let item of menu">
-            <a [routerLink]="item.routerLink" routerLinkActive="active" *ngIf="!item.items">
-              <i [class]="item.icon"></i>
-              <span *ngIf="!isSidebarCollapsed">{{ item.label }}</span>
-            </a>
-            <div class="submenu-parent" *ngIf="item.items">
-              <a href="javascript:void(0)" class="has-submenu" [class.active]="item.expanded">
-                <i [class]="item.icon"></i>
-                <span *ngIf="!isSidebarCollapsed">{{ item.label }}</span>
-                <i class="submenu-arrow pi pi-angle-down" *ngIf="!isSidebarCollapsed"></i>
-              </a>
-              <ul class="submenu" [class.active]="item.expanded" *ngIf="!isSidebarCollapsed">
-                <li *ngFor="let subItem of item.items">
-                  <a [routerLink]="subItem.routerLink" routerLinkActive="active">
-                    <i [class]="subItem.icon"></i>
-                    <span>{{ subItem.label }}</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+
+      <div class="mobile-sidebar-content" (click)="onDrawerContentClick($event)">
+        <p-panelMenu [model]="menu" [multiple]="false" styleClass="mobile-menu"></p-panelMenu>
       </div>
+
     </div>
 
     <!-- Main Content -->
