--- a/nextintranet_frontend/src/app/shared/components/ni-driver-manager/ni-driver-manager.component.html
+++ b/nextintranet_frontend/src/app/shared/components/ni-driver-manager/ni-driver-manager.component.html
@@ -1,36 +1,25 @@
 <p-toast> </p-toast>
 
-  <button pButton icon="pi pi-microchip" class="p-button-text p-button-rounded" (click)="visible=true"></button>
+<button pButton icon="pi pi-microchip" class="p-button-text p-button-rounded" (click)="visible=true"></button>
 
-<p-dialog header="Drivers management" [(visible)]="visible" [modal]="true" [closable]="true">
-
+<p-dialog header="Drivers management" [(visible)]="visible" [modal]="true" [closable]="true"
+         [style]="{width: '90vw', maxWidth: '800px'}" [breakpoints]="{'768px': '100vw'}">
   <ng-template #header>
     <div class="flex items-center justify-between gap-2">
       <h2 class="font-semibold text-lg text-gray-800">Drivers management</h2>
-      <i class="pi pi-refresh" style="cursor: pointer;" (click)="updateDriverStatus()"></i>
+      <i class="pi pi-refresh" style="cursor: pointer;" (click)="refreshDrivers()"></i>
     </div>
   </ng-template>
 
-  <div class="flex flex-col gap-4 mt-4">
-    <div class="flex flex-col gap-2">
-      <div *ngFor="let entry of runningDrivers | keyvalue" class="flex items-center justify-between border-b pb-2">
-        <div class="flex-1">
-          <b>{{ entry.key }}</b>: {{ entry.value | json }}
-        </div>
-        <div class="flex items-center gap-2">
-          <button pButton type="button" class="p-button-text p-button-plain" icon="pi pi-play" (click)="runFunction(entry.key)"></button>
-          <button pButton type="button" class="p-button-text p-button-plain" icon="pi pi-stop" (click)="stopFunction(entry.key)"></button>
-          <input type="text" [(ngModel)]="entry.value" placeholder="Edit value" class="p-inputtext p-component w-32" />
-        </div>
-      </div>
-    </div>
-  </div>
+  <p-tabView>
+    <!-- Driver Management Tab -->
+    <p-tabPanel header="Drivers">
+      <ni-driver-control-tab></ni-driver-control-tab>
+    </p-tabPanel>
 
-
-  <ng-template #footer>
-      <div class="text-sm text-gray-500">
-        <i class="pi pi-info-circle"></i> Data are not updated automatically. Click <a (click)="updateDriverStatus()" style="cursor: pointer;" >here</a> or on the refresh icon to update the data.
-      </div>
-  </ng-template>
-
+    <!-- Printer Settings Tab -->
+    <p-tabPanel header="Printers">
+      <ni-driver-printer-tab></ni-driver-printer-tab>
+    </p-tabPanel>
+  </p-tabView>
 </p-dialog>
